# ORCHID

./: .gitignore  README.md  pyproject.toml  requirements.txt
analysis/: generate_figures.py  load_results.py  plots.py
api/: app.py
benchmarks/: __init__.py  tasks.py  validator.py
configs/: default.yaml  example_faults.json  example_orchestrator.json  experiment.yaml  smoke.docker.yaml  smoke.yaml
configs/matrix/: exp_baseline.yaml  exp_latency_high.yaml  exp_latency_low.yaml  exp_latency_med.yaml  exp_missing_high.yaml  exp_missing_low.yaml  exp_missing_med.yaml  exp_permission_high.yaml  exp_permission_low.yaml  exp_permission_med.yaml  exp_timeout_high.yaml  exp_timeout_low.yaml  exp_timeout_med.yaml
docker/: .env.example  Dockerfile  compose.harness.yml  docker-compose.yml  temporal-compose.yml
evaluation/: fault_injection.py  harness.py  metrics.py
evaluation/scenarios/: example.json
example/: smoke_test.py
harness/: config.py  run_experiments.py  run_temporal_experiments.py  smoke_test.py
observability/: logger.py  replay.py  trace_schema.py  tracing.py
orchestrator/: graph.py  policies.py  state.py
orchestrator/nodes/: base_node.py  crew_node.py  llm_node.py  tool_node.py
orchestrators/: __init__.py  autogen_engine.py  common.py  crewai_engine.py  episode.py  langgraph_engine.py  temporal_engine.py  types.py
runtimes/: __init__.py  anthropic_client.py  base.py  gemini_client.py  ollama_client.py  openai_client.py  pricing.py
scripts/: run_matrix.sh  smoke_test.py
tests/: test_graph.py
tools/: __init__.py  mcp_client.py  mcp_gateway_client.py  mcp_stdio_client.py
tools/synthetic_mcp_server/: app.py
workers/: temporal_worker.py
workers/crew/: agents.py  crew_config.py  llm.py  tasks.py
