[tool.poetry]
name = "orchid"
version = "0.1.0"
description = "Research-grade hybrid agent orchestration scaffold"
authors = ["ORCHID Contributors"]
readme = "README.md"
packages = [
  { include = "orchestrator" },
  { include = "workers" },
  { include = "tools" },
  { include = "evaluation" },
  { include = "observability" },
  { include = "api" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.115.0"
uvicorn = { version = "^0.31.1", extras = ["standard"] }
pydantic = { version = "^2.7.0", extras = ["email"] }
httpx = "^0.27.0"
crewai = { version = "^1.9.3", optional = true }
litellm = { version = "^1.40.0", optional = true }
langchain-ollama = { version = "^0.2.0", optional = true }
apscheduler = { version = "^3.10.4", optional = true }
fastapi-sso = { version = "^0.15.0", optional = true }

[tool.poetry.extras]
crew = ["crewai", "litellm", "langchain-ollama", "apscheduler", "fastapi-sso"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
