[project]
name = "orchid-orchestrator-bench"
version = "0.1.0"
description = "Research-grade prototype for comparing orchestrators over tool-calling tasks"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  "pydantic>=2.5.0",
  "httpx>=0.26.0",
  "pyyaml>=6.0.0",
  "langgraph>=0.2.0",
  "crewai>=0.30.0",
  "pyautogen>=0.2.0",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "seaborn>=0.13",
]

[project.scripts]
run-experiments = "harness.run_experiments:main"
smoke-test = "scripts.smoke_test:main"
generate-figures = "analysis.generate_figures:main"
